Fixed bug which caused an uneven number of relationships to generate

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ h2 {
   width: 71px;
   height: 31px;
   margin-right: 232px;
-  margin-bottom: 208px;
+  margin-bottom: 213px;
   transform: rotate(-90deg);
   }
 
